// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a healthy component > renders its description, stories and props 1`] = `
"# Button

ID: actions-button

Triggers an action when pressed: submitting a form, opening a dialog, or
running a command. For grouping related content in a container, see
[Card](?path=/docs/data-display-card--docs).

## Stories

### Primary

Story ID: actions-button--primary

\`\`\`
import { Button } from "oversight-workspace";

const Primary = () => <Button variant="primary">Save changes</Button>;
\`\`\`

### Secondary

Story ID: actions-button--secondary

\`\`\`
import { Button } from "oversight-workspace";

const Secondary = () => <Button variant="secondary">Cancel</Button>;
\`\`\`

## Props

\`\`\`
export type Props = {
  /**
    Visual style: 'primary' for the main action, 'secondary' for supporting ones.
  */
  variant: "primary" | "secondary";
  /**
    Control height and padding. Defaults to 'md'.
  */
  size?: "sm" | "md" | "lg" = md;
  /**
    Content rendered inside the button.
  */
  children?: ReactNode;
  /**
    Fires when the button is activated by click, tap, or keyboard.
  */
  onClick?: (() => void);
}
\`\`\`"
`;

exports[`a missing component description > is unmarked in the documentation for that component 1`] = `
"# Button

ID: actions-button

## Stories

### Primary

Story ID: actions-button--primary

\`\`\`
import { Button } from "oversight-workspace";

const Primary = () => <Button variant="primary">Save changes</Button>;
\`\`\`

### Secondary

Story ID: actions-button--secondary

\`\`\`
import { Button } from "oversight-workspace";

const Secondary = () => <Button variant="secondary">Cancel</Button>;
\`\`\`

## Props

\`\`\`
export type Props = {
  /**
    Visual style: 'primary' for the main action, 'secondary' for supporting ones.
  */
  variant: "primary" | "secondary";
  /**
    Control height and padding. Defaults to 'md'.
  */
  size?: "sm" | "md" | "lg" = md;
  /**
    Content rendered inside the button.
  */
  children?: ReactNode;
  /**
    Fires when the button is activated by click, tap, or keyboard.
  */
  onClick?: (() => void);
}
\`\`\`"
`;

exports[`the selection list > truncates a description past the summary limit 1`] = `
"# Components

- Button (actions-button): Triggers an action when pressed: submitting a form, opening a dialog, or
running a command...

# Docs"
`;

exports[`the version these results describe > holds the instructions the server sends alongside the data 1`] = `
"## Documentation Workflow

**CRITICAL: Never hallucinate component properties!** Before using ANY property on a component (even common-sounding ones like \`shadow\`), you MUST verify it is documented via these tools. If it is not documented, it does not exist — never assume props from naming conventions or other libraries; report it to the user instead.

1. Call **list-all-documentation** once at the start of the task to discover available component and docs IDs.
2. Call **get-documentation** with an \`id\` from that list to retrieve full component docs, props, usage examples, and stories.
3. Call **get-documentation-for-story** for extra docs on a story variant not covered by the component docs.

Only use properties explicitly documented or shown in example stories. Only reference IDs returned by these tools; never guess IDs.

## Multi-Source Requests

- With multiple sources configured, **list-all-documentation** returns entries from every source; pass \`storybookId\` to **get-documentation** to scope one.
"
`;

exports[`three failure modes that render identically > cannot be told apart in the tool result 1`] = `
"# Button

ID: actions-button

## Stories

### Primary

Story ID: actions-button--primary

\`\`\`
import { Button } from "oversight-workspace";

const Primary = () => <Button variant="primary">Save changes</Button>;
\`\`\`

### Secondary

Story ID: actions-button--secondary

\`\`\`
import { Button } from "oversight-workspace";

const Secondary = () => <Button variant="secondary">Cancel</Button>;
\`\`\`"
`;
